# SRAM-Acquisition

./: README.md  meson.build
docs/: Doxyfile.in  meson.build
docs/source/: conf.py  index.rst  protocol.rst  puf.rst  userguide.rst
docs/source/api/: api_db.rst  api_device.rst  api_logger.rst  api_packet.rst  index.rst
scripts/: format_all.sh
src/Controller_Nucleo/: .cproject  .mxproject  .project  Controller_Nucleo Debug.launch  Controller_Nucleo.ioc  STM32L152RETX_FLASH.ld  STM32L152RETX_RAM.ld
src/Controller_Nucleo/Core/Inc/: protocol.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h
src/Controller_Nucleo/Core/Src/: main.c  protocol.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c
src/Controller_Nucleo/Debug/: Controller_Nucleo.elf  Controller_Nucleo.list  Controller_Nucleo.map  makefile
src/Controller_Nucleo/Debug/Core/Src/: main.su  protocol.su  stm32l1xx_hal_msp.su  stm32l1xx_it.su  subdir.mk
src/Controller_Nucleo/Release/: Controller_Nucleo.elf  Controller_Nucleo.list  Controller_Nucleo.map  objects.list
src/Controller_Nucleo/Release/Core/Src/: main.su  (+5 more)
src/station/: first_test.py  meson.build
src/station/include/: db_manager.hpp  device_manager.hpp  influxdb.hpp  log_manager.hpp  packet.hpp  station.hpp
src/station/src/: db_manager.cpp  device_manager.cpp  log_manager.cpp  main.cpp  packet.cpp  station.cpp
station/: meson.build
station/include/: db_manager.hpp  device_manager.hpp  influxdb.hpp  log_manager.hpp  manager.hpp  packet.hpp  server.hpp  station.hpp
station/src/: db_manager.cpp  device_manager.cpp  log_manager.cpp  main.cpp  station.cpp
(+8 files in other folders)
